--- a/index.html
+++ b/index.html
@@ -3,47 +3,151 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pet Shop do Bairro</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Pet Shop - Seu Pet em Boas Mãos</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #6c757d;
+            color: white;
+            padding: 10px;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 24px;
+        }
+
+        header nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+        }
+
+        header nav ul li {
+            margin: 0 10px;
+        }
+
+        header nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+
+        #banner {
+            position: relative;
+        }
+
+        #banner img {
+            width: 100%;
+            height: auto;
+        }
+
+        .banner-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-size: 36px;
+            text-align: center;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 10px;
+            border-radius: 10px;
+        }
+
+        .produtos {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            padding: 20px;
+            flex-wrap: wrap;
+        }
+
+        .produto {
+            text-align: center;
+            background-color: white;
+            border-radius: 10px;
+            padding: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 300px;
+            margin: 10px;
+        }
+
+        .produto img {
+            max-width: 100%;
+            border-radius: 10px;
+        }
+
+        .whatsapp-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+        }
+
+        .whatsapp-button img {
+            width: 50px;
+            height: 50px;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Pet Shop do Bairro</h1>
+        <h1>Pet Shop - Seu Pet em Boas Mãos</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="about.html">Sobre Nós</a></li>
-                <li><a href="products.html">Produtos</a></li>
-                <li><a href="contact.html">Contato</a></li>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Produtos</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="banner">
-        <img src="https://images.unsplash.com/photo-1555685812-4b743f4b8ba9?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDEzfHxwZXR8ZW58MHx8fHwxNjk0NDg2OTk4&ixlib=rb-1.2.1&q=80&w=1080" alt="Banner">
-        <div class="banner-text">
-            <h2>Os melhores produtos para seu pet</h2>
+    <div id="banner">
+        <img src="https://images.unsplash.com/photo-1555685812-4b743f4b8ba9?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDEzfHxwZXR8ZW58MHx8fHwxNjk0NDg2OTk4&ixlib=rb-1.2.1&q=80&w=1080" alt="Banner Pet Shop">
+        <div class="banner-text">Bem-vindo ao nosso Pet Shop!</div>
+    </div>
+
+    <section class="produtos">
+        <div class="produto">
+            <img src="https://images.unsplash.com/photo-1592194996308-7a5b19e27ff1?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDJ8fHBlfHwwfHx8fDE2OTQ0ODY5OTg&ixlib=rb-1.2.1&q=80&w=1080" alt="Ração Premium">
+            <h3>Ração Premium</h3>
+            <p>Ração de alta qualidade para o seu pet.</p>
+        </div>
+        <div class="produto">
+            <img src="https://images.unsplash.com/photo-1613977257366-1240bb86dd30?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDV8fHBlfHwwfHx8fDE2OTQ0ODY5OTg&ixlib=rb-1.2.1&q=80&w=1080" alt="Brinquedo para Cães">
+            <h3>Brinquedo para Cães</h3>
+            <p>Brinquedos divertidos para seu cachorro.</p>
+        </div>
+        <div class="produto">
+            <img src="https://images.unsplash.com/photo-1560807707-8cc77767d783?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDE1fHxwZXR8ZW58MHx8fHwxNjk0NDg2OTk4&ixlib=rb-1.2.1&q=80&w=1080" alt="Cama para Gatos">
+            <h3>Cama para Gatos</h3>
+            <p>Cama confortável para o seu gato.</p>
+        </div>
+        <div class="produto">
+            <img src="https://images.unsplash.com/photo-1592185287268-3b4c4eaefa6c?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDJ8fHxwZXR8ZW58MHx8fHwxNjk0NDg2OTk4&ixlib=rb-1.2.1&q=80&w=1080" alt="Ração para Cães">
+            <h3>Ração para Cães</h3>
+            <p>Ração nutritiva e saborosa para o seu cachorro.</p>
         </div>
     </section>
 
-    <section id="produtos-destaque">
-        <h2>Produtos em Destaque</h2>
-        <div class="produtos">
-            <div class="produto">
-                <img src="https://images.unsplash.com/photo-1592194996308-7a5b19e27ff1?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDJ8fHBlfHwwfHx8fDE2OTQ0ODY5OTg&ixlib=rb-1.2.1&q=80&w=1080" alt="Produto 1">
-                <p>Ração Premium</p>
-            </div>
-            <div class="produto">
-                <img src="https://images.unsplash.com/photo-1613977257366-1240bb86dd30?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDV8fHBlfHwwfHx8fDE2OTQ0ODY5OTg&ixlib=rb-1.2.1&q=80&w=1080" alt="Produto 2">
-                <p>Brinquedo para Cães</p>
-            </div>
-        </div>
-    </section>
+    <div class="whatsapp-button">
+        <a href="https://wa.me/5531999999999" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
+        </a>
+    </div>
 
-    <a href="https://wa.me/SEU_NUMERO" class="whatsapp-button">
-        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
-    </a>
-
-    <script src="scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        // JavaScript para futuras funcionalidades, se necessário
+    </script>
 </body>
 </html>
