--- a/index.html
+++ b/index.html
@@ -5,48 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet Shop - Seu Pet em Boas Mãos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             background-color: #f8f9fa;
-            margin: 0;
             padding: 0;
         }
 
         header {
-            background-color: #6c757d;
+            background-color: #343a40;
             color: white;
-            padding: 10px;
+            padding: 20px;
         }
 
         header h1 {
             margin: 0;
-            font-size: 24px;
+            font-size: 28px;
+            text-align: center;
         }
 
-        header nav ul {
+        nav ul {
             list-style: none;
             padding: 0;
             display: flex;
             justify-content: center;
+            margin-top: 10px;
         }
 
-        header nav ul li {
-            margin: 0 10px;
+        nav ul li {
+            margin: 0 15px;
         }
 
-        header nav ul li a {
+        nav ul li a {
             color: white;
             text-decoration: none;
+            font-size: 16px;
         }
 
         #banner {
             position: relative;
+            text-align: center;
+            color: white;
         }
 
         #banner img {
             width: 100%;
             height: auto;
+            max-height: 500px;
+            object-fit: cover;
         }
 
         .banner-text {
@@ -54,50 +61,69 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            color: white;
             font-size: 36px;
-            text-align: center;
             background-color: rgba(0, 0, 0, 0.5);
-            padding: 10px;
+            padding: 10px 20px;
             border-radius: 10px;
         }
 
         .produtos {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            padding: 20px;
-            flex-wrap: wrap;
+            padding: 50px 0;
         }
 
         .produto {
             text-align: center;
             background-color: white;
             border-radius: 10px;
-            padding: 10px;
+            padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 300px;
-            margin: 10px;
+            margin-bottom: 30px;
         }
 
         .produto img {
             max-width: 100%;
             border-radius: 10px;
+            height: 200px;
+            object-fit: cover;
+        }
+
+        .produto h3 {
+            margin: 15px 0 10px 0;
+        }
+
+        .produto p {
+            font-size: 14px;
+            color: #6c757d;
         }
 
         .whatsapp-button {
             position: fixed;
             bottom: 20px;
             right: 20px;
+            z-index: 1000;
         }
 
         .whatsapp-button img {
-            width: 50px;
-            height: 50px;
+            width: 60px;
+            height: 60px;
+        }
+
+        footer {
+            background-color: #343a40;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            margin-top: 30px;
+        }
+
+        footer p {
+            margin: 0;
         }
     </style>
 </head>
 <body>
+
+    <!-- Header -->
     <header>
         <h1>Pet Shop - Seu Pet em Boas Mãos</h1>
         <nav>
@@ -109,45 +135,53 @@
         </nav>
     </header>
 
+    <!-- Banner -->
     <div id="banner">
         <img src="https://images.unsplash.com/photo-1555685812-4b743f4b8ba9?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDEzfHxwZXR8ZW58MHx8fHwxNjk0NDg2OTk4&ixlib=rb-1.2.1&q=80&w=1080" alt="Banner Pet Shop">
         <div class="banner-text">Bem-vindo ao nosso Pet Shop!</div>
     </div>
 
-    <section class="produtos">
-        <div class="produto">
-            <img src="https://images.unsplash.com/photo-1592194996308-7a5b19e27ff1?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDJ8fHBlfHwwfHx8fDE2OTQ0ODY5OTg&ixlib=rb-1.2.1&q=80&w=1080" alt="Ração Premium">
-            <h3>Ração Premium</h3>
-            <p>Ração de alta qualidade para o seu pet.</p>
-        </div>
-        <div class="produto">
-            <img src="https://images.unsplash.com/photo-1613977257366-1240bb86dd30?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDV8fHBlfHwwfHx8fDE2OTQ0ODY5OTg&ixlib=rb-1.2.1&q=80&w=1080" alt="Brinquedo para Cães">
-            <h3>Brinquedo para Cães</h3>
-            <p>Brinquedos divertidos para seu cachorro.</p>
-        </div>
-        <div class="produto">
-            <img src="https://images.unsplash.com/photo-1560807707-8cc77767d783?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDE1fHxwZXR8ZW58MHx8fHwxNjk0NDg2OTk4&ixlib=rb-1.2.1&q=80&w=1080" alt="Cama para Gatos">
-            <h3>Cama para Gatos</h3>
-            <p>Cama confortável para o seu gato.</p>
-        </div>
-        <div class="produto">
-            <img src="https://images.unsplash.com/photo-1592185287268-3b4c4eaefa6c?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDJ8fHxwZXR8ZW58MHx8fHwxNjk0NDg2OTk4&ixlib=rb-1.2.1&q=80&w=1080" alt="Ração para Cães">
-            <h3>Ração para Cães</h3>
-            <p>Ração nutritiva e saborosa para o seu cachorro.</p>
+    <!-- Produtos Section -->
+    <section class="produtos container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="produto">
+                    <img src="https://images.unsplash.com/photo-1592194996308-7a5b19e27ff1?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDJ8fHBlfHwwfHx8fDE2OTQ0ODY5OTg&ixlib=rb-1.2.1&q=80&w=1080" alt="Ração Premium">
+                    <h3>Ração Premium</h3>
+                    <p>Ração de alta qualidade para o seu pet.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="produto">
+                    <img src="https://images.unsplash.com/photo-1613977257366-1240bb86dd30?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDV8fHBlfHwwfHx8fDE2OTQ0ODY5OTg&ixlib=rb-1.2.1&q=80&w=1080" alt="Brinquedo para Cães">
+                    <h3>Brinquedo para Cães</h3>
+                    <p>Brinquedos divertidos para seu cachorro.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="produto">
+                    <img src="https://images.unsplash.com/photo-1560807707-8cc77767d783?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDE1fHxwZXR8ZW58MHx8fHwxNjk0NDg2OTk4&ixlib=rb-1.2.1&q=80&w=1080" alt="Cama para Gatos">
+                    <h3>Cama para Gatos</h3>
+                    <p>Cama confortável para o seu gato.</p>
+                </div>
+            </div>
         </div>
     </section>
 
+    <!-- WhatsApp Button -->
     <div class="whatsapp-button">
         <a href="https://wa.me/5531999999999" target="_blank">
             <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
         </a>
     </div>
 
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Pet Shop. Todos os direitos reservados.</p>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-        // JavaScript para futuras funcionalidades, se necessário
-    </script>
 </body>
 </html>
